# nanoPRC

./: .gitattributes  .gitignore  .gitmodules  CLA.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Doxyfile.public  README.md  RELEASE_CHECKLIST.md  THIRD_PARTY_NOTICES.md
.github/: CODEOWNERS  LEGAL_CONFIRMATION_COMMENT.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yaml  doxygen-public.yaml  legal-attestation.yaml  python-publish.yaml  python-verify-pypi.yaml  python-verify-testpypi.yaml  python-wheels.yaml  tag-policy.yaml  version.yaml
demos/: CMakeLists.txt
demos/json_export/: CMakeLists.txt
demos/json_export/src/: json_export.c  json_writer.c  json_writer.h
demos/obj_export/: CMakeLists.txt
demos/obj_export/src/: obj_export.c
demos/quick_start/: CMakeLists.txt
demos/quick_start/src/: main.c
demos/stl_export/: CMakeLists.txt
demos/stl_export/src/: stl_export.c
demos/stl_import/: CMakeLists.txt
demos/stl_import/src/: stl_import.c
demos/teapot_write/: CMakeLists.txt
demos/teapot_write/src/: teapot_write.c
demos/viewer/: CMakeLists.txt
demos/viewer/cmake/: shader_to_header.cmake
demos/viewer/glad/include/glad/: glad.h
demos/viewer/glad/src/: glad.c
demos/viewer/shaders/: composite.frag  composite.vert  downsample.frag  generic.frag  generic.vert  gui.frag  gui.vert  shadow.vert  skybox.frag  skybox.vert  upsample.frag
demos/viewer/src/: bloom.cpp  bloom.h  camera.cpp  camera.h  composite.cpp  composite.h  config.cpp  config.h  graphics2d.cpp  graphics2d.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  product.cpp  product.h  roboto_font.h  scene.cpp  scene.h  shader.cpp  shader.h  shadow.cpp  shadow.h  skybox.cpp  skybox.h  stb_truetype.h  text.cpp  text.h  texture.cpp  texture.h  util.h
include/: prc_api.h  prc_context.h  prc_version.h.in
python/: CMakeLists.txt  DEVELOPMENT.md  README.md  pyproject.toml
python/examples/: 01_import_and_context.py  02_open_file.py  03_pytest_style_smoke.py  04_list_views.py  05_model_tree_summary.py  06_tessellation_summary.py  07_opengl_viewer.py  08_display_attributes.py  09_prc_teapot_write.py
python/src/: bindings.cpp
python/src/nanoprc_py/: __init__.py
python/tests/: test_import.py
python/tools/: debug_env_check.py
src/: debug.h  prc_api.c  prc_api_debug.c  prc_api_debug.h  prc_api_write.c  prc_api_write_pdf.c  prc_bit.c  prc_bit.h  prc_context.c  prc_data.h  prc_data_temp.h  prc_decode_compressed_tess.c  prc_decode_compressed_tess.h  prc_decode_markup_tess.c  prc_decode_markup_tess.h  prc_double.c  prc_double.h  prc_error.c  prc_fwd.h  prc_huff.c  prc_huff.h  prc_internal_api.h  prc_internal_proto_api.h  prc_json_debug.c  prc_json_debug.h  prc_memory.c  prc_parse_common.c  prc_parse_common.h  prc_parse_extra_geometry.c  prc_parse_extra_geometry.h  prc_parse_file_structure.c  prc_parse_file_structure.h  prc_parse_global.c  prc_parse_global.h  prc_parse_main.c  prc_parse_tess.c  prc_parse_tess.h  prc_parse_tree.c  prc_parse_tree.h  prc_pdf.c  (+37 more)
src/brep/: BREP_PLACEHOLDER.md  prc_write_brep.h
tests/: CMakeLists.txt  prc_test.h
tests/fixtures/: README.md
tests/functional/: CMakeLists.txt  test_stl_roundtrip.c
tests/internal/: CMakeLists.txt  bisect_tess_positions.c  census_tess.c  check_grid_radius.c  check_schema_extension.c  check_single_tri_pdf.c  check_vertex_normal_variance.c  detect_tess_spikes.c  dump_raw_tess_arrays.c  dump_tree_fields.c  dump_uncompressed_tess_fields.c  embed_real_prc.c  experiment_mustcalc_quad.c  extract_raw_prc.c  inspect_position_bits.c  matrix_blank_tree.c  prc_to_pdf.c  reauthor_tess_pdf.c  reencode_real_tess.c  reencode_real_tess_triangles.c  reprc_test.c  scan_prc.c  splice_geom_from_real.c  splice_model_section.c  splice_schema_tree_section.c  splice_schema_tree_tess_section.c  splice_schema_tree_tess_section_triangles.c  splice_tess_field.c  splice_tess_field_c1.c  splice_tree_section.c  standalone_grid_triangles.c  standalone_mixed_chains.c  standalone_multichain.c  standalone_nonmanifold_fan.c  standalone_quad_deeptree.c  standalone_tetrahedron_triangles.c  tess_spike_common.c  tess_spike_common.h  verify_manifold_pdf.c  verify_manifold_real.c  (+1 more)
tests/unit/: test_bitwrite.c  test_compress_tess.c  test_file_structure.c  test_globals.c  test_normals.c  test_tess_3d.c  test_traversal.c  test_wire_tess.c
